--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "prettier": "2.2.1"
   },
   "keywords": [
